# snowscraper

./: .flake8  .pre-commit-config.yaml  pyproject.toml  requirements.txt  results.json
.github/workflows/: scrape_and_commit.yml
snowscraper/: cli.py  controller.py  helpers.py  scraper.py
snowscraper/scrapers/: medium.py  quickstarts.py
